--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -95,33 +95,19 @@
             </small>
 
             <script>
-        
                 {% if alocacoes %}
-
                     semestres = ""
-
                     {% for key, alocacoes_tmp in alocacoes.items %}
-                        var data{{key}} = [
-                        {% for alocacao in alocacoes_tmp %}
-                            {% with media=alocacao.get_media %}
-                                {% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                    {
-                                        x: {{media.media|unlocalize}},
-                                        i: {{media.individual|unlocalize}},
-                                        y: {{alocacao.aluno.cr|unlocalize}},
-                                        name: "{{alocacao.aluno.user.get_full_name}}"
-                                    },
-                                {% endif %}
-                            {% endwith %}
-                        {% endfor %}
-                        ];
-
+                        var data{{key}} = [{% for alocacao in alocacoes_tmp %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
+                                    {  x: {{media.media|unlocalize}},
+                                       i: {{media.individual|unlocalize}},
+                                       y: {{alocacao.aluno.cr|unlocalize}},
+                                       name: "{{alocacao.aluno.user.get_full_name}}"},
+                        {% endif %}{% endwith %}{% endfor %}];
                         semestres += "Quantidade de estudantes em {{key}} = " + data{{key}}.length + "<br>"
-
                     {% endfor %}
-                    
-                    $("#semestres").html(semestres);
 
+                    $("#semestres").html(semestres);
                     {% for key, alocacoes_tmp in alocacoes.items %}
                         var data{{key}}_i = [];
                         for (var est in data{{key}}) {
@@ -134,25 +120,16 @@
                             );
                         }
                     {% endfor %}
-
                 {% endif %}
 
                 {% if estudantes_computacao %}
-
-                    var data_estudantes_computacao = [
-                    {% for alocacao in estudantes_computacao %}
-                        {% with media=alocacao.get_media %}
-                            {% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                {
-                                    x: {{media.media|unlocalize}},
-                                    i: {{media.individual|unlocalize}},
-                                    y: {{alocacao.aluno.cr|unlocalize}},
-                                    name: "{{alocacao.aluno.user.get_full_name}}"
+                    var data_estudantes_computacao = [{% for alocacao in estudantes_computacao %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
+                                {  x: {{media.media|unlocalize}},
+                                   i: {{media.individual|unlocalize}},
+                                   y: {{alocacao.aluno.cr|unlocalize}},
+                                   name: "{{alocacao.aluno.user.get_full_name}}"
                                 },
-                            {% endif %}
-                        {% endwith %}
-                    {% endfor %}
-                    ];
+                    {% endif %}{% endwith %}{% endfor %}];
 
                     if (data_estudantes_computacao.length > 0) {
                         $("#computacao").html("Quantidade de estudantes de Computação = " + data_estudantes_computacao.length);
@@ -168,25 +145,16 @@
                             }
                         );
                     }
-
                 {% endif %}
 
                 {% if estudantes_mecanica %}
-
-                    var data_estudantes_mecanica = [
-                    {% for alocacao in estudantes_mecanica %}
-                        {% with media=alocacao.get_media %}
-                            {% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                {
-                                    x: {{media.media|unlocalize}},
-                                    i: {{media.individual|unlocalize}},
-                                    y: {{alocacao.aluno.cr|unlocalize}},
-                                    name: "{{alocacao.aluno.user.get_full_name}}"
+                    var data_estudantes_mecanica = [{% for alocacao in estudantes_mecanica %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
+                                {  x: {{media.media|unlocalize}},
+                                   i: {{media.individual|unlocalize}},
+                                   y: {{alocacao.aluno.cr|unlocalize}},
+                                   name: "{{alocacao.aluno.user.get_full_name}}"
                                 },
-                            {% endif %}
-                        {% endwith %}
-                    {% endfor %}
-                    ];
+                    {% endif %}{% endwith %}{% endfor %}];
 
                     if (data_estudantes_mecanica.length > 0) {
                         $("#mecanica").html("Quantidade de estudantes de Mecânica = " + data_estudantes_mecanica.length);
@@ -202,25 +170,16 @@
                             }
                         );
                     }
-
                 {% endif %}
 
                 {% if estudantes_mecatronica %}
-
-                    var data_estudantes_mecatronica = [
-                    {% for alocacao in estudantes_mecatronica %}
-                        {% with media=alocacao.get_media %}
-                            {% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                {
-                                    x: {{media.media|unlocalize}},
-                                    i: {{media.individual|unlocalize}},
-                                    y: {{alocacao.aluno.cr|unlocalize}},
-                                    name: "{{alocacao.aluno.user.get_full_name}}"
+                    var data_estudantes_mecatronica = [{% for alocacao in estudantes_mecatronica %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
+                                {  x: {{media.media|unlocalize}},
+                                   i: {{media.individual|unlocalize}},
+                                   y: {{alocacao.aluno.cr|unlocalize}},
+                                   name: "{{alocacao.aluno.user.get_full_name}}"
                                 },
-                            {% endif %}
-                        {% endwith %}
-                    {% endfor %}
-                    ];
+                    {% endif %}{% endwith %}{% endfor %}];
 
                     if (data_estudantes_mecatronica.length > 0) {
                         $("#mecatronica").html("Quantidade de estudantes de Mecatrônica = " + data_estudantes_mecatronica.length);
@@ -236,8 +195,10 @@
                             }
                         );
                     }
-
                 {% endif %}
+            </script>
+
+            <script>
 
                 var options = {
                     aspectRatio: 1,
@@ -283,9 +244,7 @@
                             }
                         }]
                     },
-
                 };
-
 
                 var options_i = {
                     aspectRatio: 1,
