--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -99,9 +99,8 @@
                     semestres = ""
                     {% for key, alocacoes_tmp in alocacoes.items %}
                         var data{{key}} = [{% for alocacao in alocacoes_tmp %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                    {  x: {{media.media|unlocalize}},
+                                    {  x: {{media.media|unlocalize}}, y: {{alocacao.aluno.cr|unlocalize}},
                                        i: {{media.individual|unlocalize}},
-                                       y: {{alocacao.aluno.cr|unlocalize}},
                                        name: "{{alocacao.aluno.user.get_full_name}}"},
                         {% endif %}{% endwith %}{% endfor %}];
                         semestres += "Quantidade de estudantes em {{key}} = " + data{{key}}.length + "<br>"
@@ -121,16 +120,15 @@
                         }
                     {% endfor %}
                 {% endif %}
+            </script>
 
+            <script>
                 {% if estudantes_computacao %}
                     var data_estudantes_computacao = [{% for alocacao in estudantes_computacao %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                {  x: {{media.media|unlocalize}},
+                                {  x: {{media.media|unlocalize}}, y: {{alocacao.aluno.cr|unlocalize}},
                                    i: {{media.individual|unlocalize}},
-                                   y: {{alocacao.aluno.cr|unlocalize}},
                                    name: "{{alocacao.aluno.user.get_full_name}}"
-                                },
-                    {% endif %}{% endwith %}{% endfor %}];
-
+                                }{% if not forloop.last %},{% endif %}{% endif %}{% endwith %}{% endfor %}];
                     if (data_estudantes_computacao.length > 0) {
                         $("#computacao").html("Quantidade de estudantes de Computação = " + data_estudantes_computacao.length);
                     }
@@ -146,16 +144,15 @@
                         );
                     }
                 {% endif %}
+            </script>
 
+            <script>
                 {% if estudantes_mecanica %}
                     var data_estudantes_mecanica = [{% for alocacao in estudantes_mecanica %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                {  x: {{media.media|unlocalize}},
+                                {  x: {{media.media|unlocalize}}, y: {{alocacao.aluno.cr|unlocalize}},
                                    i: {{media.individual|unlocalize}},
-                                   y: {{alocacao.aluno.cr|unlocalize}},
                                    name: "{{alocacao.aluno.user.get_full_name}}"
-                                },
-                    {% endif %}{% endwith %}{% endfor %}];
-
+                                }{% if not forloop.last %},{% endif %}{% endif %}{% endwith %}{% endfor %}];
                     if (data_estudantes_mecanica.length > 0) {
                         $("#mecanica").html("Quantidade de estudantes de Mecânica = " + data_estudantes_mecanica.length);
                     }
@@ -171,16 +168,15 @@
                         );
                     }
                 {% endif %}
+            </script>
 
+            <script>
                 {% if estudantes_mecatronica %}
                     var data_estudantes_mecatronica = [{% for alocacao in estudantes_mecatronica %}{% with media=alocacao.get_media %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
-                                {  x: {{media.media|unlocalize}},
+                                {  x: {{media.media|unlocalize}}, y: {{alocacao.aluno.cr|unlocalize}},
                                    i: {{media.individual|unlocalize}},
-                                   y: {{alocacao.aluno.cr|unlocalize}},
                                    name: "{{alocacao.aluno.user.get_full_name}}"
-                                },
-                    {% endif %}{% endwith %}{% endfor %}];
-
+                                }{% if not forloop.last %},{% endif %}{% endif %}{% endwith %}{% endfor %}];
                     if (data_estudantes_mecatronica.length > 0) {
                         $("#mecatronica").html("Quantidade de estudantes de Mecatrônica = " + data_estudantes_mecatronica.length);
                     }
