--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -148,7 +148,7 @@
                         callbacks: {
                             label: function(tooltipItem, data) {
                                 var label = data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].name;
-                                return label + ': (' + tooltipItem.xLabel + ', ' + tooltipItem.yLabel + ')';
+                                return label + ': (' + tooltipItem.xLabel.toFixed(2) + ', ' + tooltipItem.yLabel.toFixed(2) + ')';
                             }
                         }
                     },
@@ -191,7 +191,7 @@
                         callbacks: {
                             label: function(tooltipItem, data) {
                                 var label = data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].name;
-                                return label + ': (' + tooltipItem.xLabel + ', ' + tooltipItem.yLabel + ')';
+                                return label + ': (' + tooltipItem.xLabel.toFixed(2) + ', ' + tooltipItem.yLabel.toFixed(2) + ')';
                             }
                         }
                     },
