--- a/documentos/templates/documentos/index_documentos.html
+++ b/documentos/templates/documentos/index_documentos.html
@@ -20,69 +20,80 @@
     {% endcomment %}
     <br>
     <h5>Área Geral</h5>
+    <ul>
     {% if regulamento %}
         <a data-toggle="tooltip" data-html="true" animation="true" title="Data: {{regulamento.data}}" 
-           href="../..{{MEDIA_URL}}{{regulamento.documento}}"><b>Regulamento do PFE</b></a><br>
+           href="../..{{MEDIA_URL}}{{regulamento.documento}}"><li>Regulamento do PFE</li></a>
     {% endif %}
     {% if plano_de_aprendizagem %}
         <a data-toggle="tooltip" data-html="true" animation="true" title="Data: {{plano_de_aprendizagem.data}}"
-           href="../..{{MEDIA_URL}}{{plano_de_aprendizagem.documento}}"><b>Plano de Aprendizagem</b></a><br>
+           href="../..{{MEDIA_URL}}{{plano_de_aprendizagem.documento}}"><li>Plano de Aprendizagem</li></a>
     {% endif %}
-    <a href="{% url 'relatorios_publicos' %}"><b>Relatórios Públicos</b></a><br>
-    <a href="{% url 'materias_midia' %}"><b>Matérias na Mídia</b></a><br>
+    <a href="{% url 'relatorios_publicos' %}"><li>Relatórios Públicos</li></a>
+    <a href="{% url 'materias_midia' %}"><li>Matérias na Mídia</li></a>
+    </ul>
 
     {% if user.tipo_de_usuario == 1 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} <!-- Estudante ou Professor ou Adm -->
         <hr>
         <h5>Área dos Estudantes</h5> <!-- Estudante -->
+        <ul>
         {% if manual_aluno %}
-            <a href="../..{{MEDIA_URL}}{{manual_aluno.documento}}"><b>Manual para os Estudantes</b></a><br>
+            <a href="../..{{MEDIA_URL}}{{manual_aluno.documento}}"><li>Manual para os Estudantes</li></a>
         {% endif %}
         {% if manual_planejamento %}
-            <a href="../..{{MEDIA_URL}}{{manual_planejamento.documento}}"><b>Manual para Confecção de Relatórios de Planejamento</b></a><br>
+            <a href="../..{{MEDIA_URL}}{{manual_planejamento.documento}}"><li>Manual para Confecção de Relatórios de Planejamento</li></a>
         {% endif %}
         {% if manual_relatorio %}
-            <a href="../..{{MEDIA_URL}}{{manual_relatorio.documento}}"><b>Manual para Confecção de Relatórios</b></a><br>
-        {% endif %}
-        {% if template_relatorio %}
-            <a href="../..{{MEDIA_URL}}{{template_relatorio.documento}}">&#x21B3;<b style="margin-left: 2px;">Template para Relatórios</b></a><br>
+            <a href="../..{{MEDIA_URL}}{{manual_relatorio.documento}}"><li>Manual para Confecção de Relatórios</li></a>
+            {% if template_relatorio %}
+                <ul>
+                    <a href="../..{{MEDIA_URL}}{{template_relatorio.documento}}"><li style="margin-left: -2em;list-style-type: '&#x21B3;';"> Template para Relatórios</li></a>
+                </ul>
+            {% endif %}
         {% endif %}
         {% if manual_apresentacao %}
-            <a href="../..{{MEDIA_URL}}{{manual_apresentacao.documento}}"><b>Manual de Apresentação para Banca</b></a><br>
+            <a href="../..{{MEDIA_URL}}{{manual_apresentacao.documento}}"><li>Manual de Apresentação para Banca</li></a>
         {% endif %}
+        </ul>
     {% endif %}
 
     {% if user.tipo_de_usuario == 3 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} <!-- Parceiro ou Professor ou Adm -->
         <hr>
         <h5>Área dos Parceiros</h5>
+        <ul>
         {% if termo_parceria_pdf %}
-            <a data-toggle="tooltip" data-html="true" animation="true" title="Data: {{termo_parceria_pdf.data}}" href="../..{{MEDIA_URL}}{{termo_parceria_pdf.documento}}"><b>Termo de Parceria - PDF</b></a><br>
+            <a data-toggle="tooltip" data-html="true" animation="true" title="Data: {{termo_parceria_pdf.data}}" href="../..{{MEDIA_URL}}{{termo_parceria_pdf.documento}}"><li>Termo de Parceria - PDF</li></a>
         {% endif %}
         {% if termo_parceria_doc %}
-            <a data-toggle="tooltip" data-html="true" animation="true" title="Data: {{termo_parceria_doc.data}}" href="../..{{MEDIA_URL}}{{termo_parceria_doc.documento}}"><b>Termo de Parceria - DOC</b></a><br>
+            <a data-toggle="tooltip" data-html="true" animation="true" title="Data: {{termo_parceria_doc.data}}" href="../..{{MEDIA_URL}}{{termo_parceria_doc.documento}}"><li>Termo de Parceria - DOC</li></a>
         {% endif %}
+        </ul>
     {% endif %}
 
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} <!-- Professor ou Adm -->
         <hr>
         <h5>Área do Professor</h5>
-        <a href="{% url 'tabela_documentos' %}"><b>Tabelas de Documentação dos Projetos</b></a><br>
-        <a href="{% url 'tabela_atas' %}"><b>Atas do Comitê</b></a><br>
+        <ul>
+        <a href="{% url 'tabela_documentos' %}"><li>Tabelas de Documentação dos Projetos</li></a>
+        <a href="{% url 'tabela_atas' %}"><li>Atas do Comitê</li></a>
         {% if manual_bancas %}
-            <a href="../..{{MEDIA_URL}}{{manual_bancas.documento}}"><b>Manual de Participação em Bancas</b></a><br>
+            <a href="../..{{MEDIA_URL}}{{manual_bancas.documento}}"><li>Manual de Participação em Bancas</li></a>
         {% endif %}
         {% if manual_orientador %}
-            <a href="../..{{MEDIA_URL}}{{manual_orientador.documento}}"><b>Manual do Orientador</b></a><br>
+            <a href="../..{{MEDIA_URL}}{{manual_orientador.documento}}"><li>Manual do Orientador</li></a>
         {% endif %}
         {% if manual_avaliacoes %}
-            <a href="../..{{MEDIA_URL}}{{manual_avaliacoes.documento}}"><b>Manual de Avaliações</b></a><br>
+            <a href="../..{{MEDIA_URL}}{{manual_avaliacoes.documento}}"><li>Manual de Avaliações</li></a>
         {% endif %}
-
+        </ul>
     {% endif %}
 
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} <!-- Professor ou Adm -->
         <hr>
         <h5>Área do Operacional</h5>
-        <a href="{% url 'tabela_seguros' %}"><b>Seguros Emitidos</b></a><br>
+        <ul>
+        <a href="{% url 'tabela_seguros' %}"><li>Seguros Emitidos</li></a>
+        </ul>
     {% endif %}
 
 {% endblock %}
