--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -393,33 +393,33 @@
     <hr>
     <div style="max-width: 80em; text-align: center;">
 
-      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
       data-toggle="tooltip" data-html="true" animation="true" title="Acessa a poposta do projeto"
       href="{% url 'proposta_completa' projeto.proposta.id %}">Proposta</a>
 
-      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
       data-toggle="tooltip" data-html="true" animation="true" title="Acessa as avaliações das bancas"
       href="{% url 'conceitos_obtidos' projeto.id %}">Resultado Bancas</a>
 
-      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
       data-toggle="tooltip" data-html="true" animation="true" title="Acessa os agendamentos das bancas"
       href="{% url 'bancas_lista' projeto.id %}">Agendamentos</a>
 
       {% if projetos_avancados %}
-        <a class="myButton" 
+        <a class="btn btn-primary mb-1 mt-2" 
         data-toggle="tooltip" data-html="true" animation="true" title="Acessa a versão avançada desse projeto"
-        href="{% url 'projeto_avancado' projeto.id %}" style="width: 13em; padding-bottom: 3px;">Avançado</a>
+        href="{% url 'projeto_avancado' projeto.id %}" style="width: 13em;">Avançado</a>
       {% else %}
-      <a class="myButton" 
+      <a class="btn btn-primary mb-1 mt-2" 
         data-toggle="tooltip" data-html="true" animation="true" title="Cria uma versão avançada desse projeto"
-        onclick="cria_avancado()" style="color:white; width: 13em; padding-bottom: 3px;">Cria Avançado</a>
+        onclick="cria_avancado()" style="color:white; width: 13em;">Cria Avançado</a>
       {% endif %}
 
-      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
       data-toggle="tooltip" data-html="true" animation="true" title="Permite avaliar as entregas do projeto"
       href="{% url 'avaliar_entregas' projeto.id %}">Avaliar Entregas</a>
 
-      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      <a class="btn btn-primary mb-1 mt-2" style="width: 13em;"
       data-toggle="tooltip" data-html="true" animation="true" title="Permite editar alguns campos do projeto"
       href="{% url 'editar_projeto' projeto.id %}">Editar</a>
 
