--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,6 +19,8 @@
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
     }
+    .errorlist {list-style-type: none; padding: 0; margin: 0;}
+    .errorlist li {color: red;}
   </style>
 {% endblock %}
 
@@ -33,38 +35,39 @@
           <div class="card-body">
             <form method="post">
               {% csrf_token %}
+              {% if form.non_field_errors %}
+                <div class="alert alert-danger" role="alert">{{ form.non_field_errors }}</div>
+              {% endif %}
               <div class="form-group row mb-1">
                 <label for="{{ form.username.id_for_label }}" class="col-sm-3 col-form-label pr-0">
                   <span lang="pt">
-                    {% language "pt-br" %}
-                      {{ form.username.label }}
-                    {% endlanguage %}
+                    {% language "pt-br" %}{{ form.username.label }}{% endlanguage %}
                   </span>
                   <span lang="en" style="display: none;">
-                    {% language "en" %}
-                      {{ form.username.label }}
-                    {% endlanguage %}
+                    {% language "en" %}{{ form.username.label }}{% endlanguage %}
                   </span>
                 </label>
                 <div class="col-sm-9">
                   {{ form.username }}
+                  {% if form.username.errors %}
+                    <div class="text-danger">{{ form.username.errors }}</div>
+                  {% endif %}
                 </div>
               </div>
               <div class="form-group row mb-3">
                 <label for="{{ form.password.id_for_label }}" class="col-sm-3 col-form-label pr-0">
                   <span lang="pt">
-                    {% language "pt-br" %}
-                      {{ form.password.label }}
-                    {% endlanguage %}
+                    {% language "pt-br" %}{{ form.password.label }}{% endlanguage %}
                   </span>
                   <span lang="en" style="display: none;">
-                    {% language "en" %}
-                      {{ form.password.label }}
-                    {% endlanguage %}
+                    {% language "en" %}{{ form.password.label }}{% endlanguage %}
                   </span>
                 </label>
                 <div class="col-sm-9">
                   {{ form.password }}
+                  {% if form.password.errors %}
+                    <div class="text-danger">{{ form.password.errors }}</div>
+                  {% endif %}
                 </div>
               </div>
               <div class="d-grid">
