--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -52,24 +52,39 @@
       {% include "estudantes/includes/trab_ativ_famil.html" %}
 
       <div class="mt-3">
-        <label for="linkedin">
+        <label for="{{ form.linkedin.id_for_label }}">
           {% lng "Caso desejar, você pode informar seu LinkedIn: (opcional)" "If you wish, you can inform your LinkedIn: (optional)" %}
         </label><br>
-        <input type="text" size="80" id="linkedin" name="linkedin" pattern="\s*https?://(www\.)?linkedin\.com/[^\s]*\s*" maxlength="{% max_length_menos PFEUser 'linkedin' 7 %}" {% if estudante.user.linkedin %}value="{{estudante.user.linkedin}}"{% endif %} placeholder="https://www.linkedin.com/" {% if vencido %}disabled{% endif %}>
+        {{ form.linkedin }}
+        {% if form.linkedin.errors %}
+          <div class="alert alert-danger mt-1">
+            {{ form.linkedin.errors }}
+          </div>
+        {% endif %}
       </div>
       
       <div class="mt-3">
-        <label for="conta_github">
+        <label for="{{ form.conta_github.id_for_label }}">
           {% lng "Informe seu usuário GitHub: (pode ser informado posteriormente para uso do GitHub)" "Inform your GitHub user: (can be informed later for GitHub use)" %}
         </label><br>
-        <input type="text" size="38" id="conta_github" name="conta_github" maxlength="{% max_length PFEUser 'conta_github' %}" {% if estudante.user.conta_github %}value="{{estudante.user.conta_github}}"{% endif %} {% if vencido %}disabled{% endif %}>
+        {{ form.conta_github }}
+        {% if form.conta_github.errors %}
+          <div class="alert alert-danger mt-1">
+            {{ form.conta_github.errors }}
+          </div>
+        {% endif %}
       </div>
 
       <div class="mt-3">
-        <label for="celular">
+        <label for="{{ form.celular.id_for_label }}">
           {% lng "Caso desejar, você pode informar seu telefone celular: (opcional)" "If you wish, you can inform your cell phone number: (optional)" %}
         </label><br>
-        <input type="text" size="20" maxlength="{% max_length PFEUser 'celular' %}" id="celular" name="celular" {% if estudante.user.celular %}value="{{estudante.user.celular}}"{% endif %} placeholder="(XX)XXXX-XXXX" {% if vencido %}disabled{% endif %}>
+        {{ form.celular }}
+        {% if form.celular.errors %}
+          <div class="alert alert-danger mt-1">
+            {{ form.celular.errors }}
+          </div>
+        {% endif %}
         <br><small><b class="text-danger">
           {% lng "Iremos usar esse número para enviar avisos de forma não oficial pelo WhatsApp. A comunicação oficial é pelo seu e-mail de estudante!" "We will use this number to send unofficial notifications via WhatsApp. Official communication is through your student email!" %}
         </b></small>
@@ -81,11 +96,14 @@
           {% lng "Você autoriza compartilhar seu relatório de desempenho (somente os feedbacks do orientador, sem notas) com potenciais empregadores interessados?" "Do you authorize sharing your performance report (only advisor feedback, no grades) with potential interested employers?" %}
         </label>
         <label class="checkbox-inline">
-          <input type="checkbox" id="recrutadores" name="recrutadores"
-                 {% if estudante.recrutadores %}checked{% endif %}
-                 {% if vencido %}disabled{% endif %}>
+          {{ form.recrutadores }}
           <span>{% lng "Autorizo" "I authorize" %}</span>
         </label>
+        {% if form.recrutadores.errors %}
+          <div class="alert alert-danger mt-1">
+            {{ form.recrutadores.errors }}
+          </div>
+        {% endif %}
       </div>
 
       <button class="btn btn-primary mb-1 mt-3" type="submit" {% if vencido %}disabled{% endif %}>
