--- a/organizacoes/templates/organizacoes/carrega_proposta.html
+++ b/organizacoes/templates/organizacoes/carrega_proposta.html
@@ -21,23 +21,7 @@
 
 {% block content %}
 
-  {% if edicao and liberadas_propostas %}
-    <h3 class="red-bold">Propostas de Projetos já liberadas para estudantes, edição desabilitada.</h3>
-    {% if user.tipo_de_usuario == 4 %} {% comment %} tipo_de_usuario == 4 >>> Administrador {% endcomment %}
-      <h5 class="red-bold">Você está logado como administrador e pode editar a proposta.</h3>
-    {% endif %}
-    <br>
-  {% endif %}
-
-  {% if professor %}
-    <strong>Seu Perfil é de Professor, você está preenchendo para alguma organização.</strong><br>
-  {% elif administrador %}
-    <strong>Seu Perfil é de Administrador, você está preenchendo para alguma organização.</strong><br>
-  {% endif %}
-  
-  <br>
-
-  <form action="" method="post" enctype="multipart/form-data"> {% csrf_token %}  
+  <form class="mt-3" action="" method="post" enctype="multipart/form-data"> {% csrf_token %}  
 
     <label for="nome" style="width: 3.4em;">
       {% lng "Nome:" "Name:" %}</label>
@@ -49,9 +33,7 @@
       pattern="^[\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,99}[\s]*([;,][\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})*[\s]*$" 
       oninvalid="this.setCustomValidity('Digite um ou mais endereços de e-mail (e-mails separados por ponto e vírgula)')" oninput="this.setCustomValidity('')" required><br><br>
 
-    <label for="arquivo" style="margin-left: 2em;">
-      {% lng "Arquivo PDF:" "PDF File:" %}
-    </label> 
+    <label for="arquivo" style="margin-left: 2em;">{% lng "Arquivo PDF:" "PDF File:" %}</label> 
     {% include "selecionar_arquivo.html" with arquivo_nome="arquivo" arquivo_accept="application/pdf" required=True %}<br><br>
 
     <button type="submit" class="btn btn-primary mb-1 mr-4">
